<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.example.androidportfolio.ui.githubsearch.viewmodel.GitHubSearchViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/double_padding">

        <EditText
            android:id="@+id/et_search_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/github_query_hint"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_url_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/github_query_text"
            android:textSize="22sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_padding">

                <TextView
                    android:id="@+id/tv_github_search_results_json"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/github_query_result_text"
                    android:textSize="18sp" />

            </ScrollView>

            <TextView
                android:id="@+id/tv_github_search_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/double_padding"
                android:text="@string/load_weather_error_message"
                android:textSize="22sp"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/github_search_progress_bar"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </FrameLayout>

    </LinearLayout>

</layout>